--- a/style.css
+++ b/style.css
@@ -1,4 +1,41 @@
+html, body{
+    margin:0;
+    padding:0;
+    /*width:100%;
+    height:100%;*/
+    background-color: rgb(50, 50, 50);
+    color: whitesmoke;
+    
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    
+
+
+}
+
+::-webkit-scrollbar{
+    display: none; /* Chrome */
+}
+
+
+
 .canvasStyle{
+
+    border: 0;
+    left: 0;
     float: left;
-    margin-right:  30px;
+    background-color: rgb(100, 100, 100);
+    
+}
+
+p, button, label, form{
+
+}
+
+label{
+    display: block;
+}
+
+#controls{
+
 }
